# nanotorch

./: .gitignore  LICENSE  README.rst  example.py  requirements.txt  setup.cfg  setup.py
nanotorch/: _tensor.py  version.py
nanotorch/nn/: functional.py
src/nanotorch/: __init__.py  _tensor.py  _types.py  exceptions.py  logger.py  optim.py  tmp.py  utils.py  version.py
src/nanotorch/nn/: __init__.py  _layers.py  _losses.py
tests/: _tensor_test.py
