[metadata]
name = nanotorch
version = 2.1.0
description = nanotorch: Small-scale implementation of PyTorch from the ground up.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/xames3/nanotorch/
author = Akshay Mestry (XAMES3)
author_email = xa@mes3.dev
license = MIT
license_file = LICENSE
platforms = osx, linux
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Typing :: Typed
keywords = nanotorch, pytorch, python
project_urls =
    Source = https://github.com/xames3/nanotorch
    Tracker = https://github.com/xames3/nanotorch/issues

[options]
packages = find:
python_requires = >=3.6
zip_safe = False

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[mypy]
mypy_path = src/nanotorch
python_version = 3.11
show_error_codes = True
allow_redefinition = True
disallow_subclassing_any = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
local_partial_types = True
no_implicit_reexport = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True
check_untyped_defs = True
disallow_any_generics = True
ignore_missing_imports = True
warn_unreachable = True
